--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bookly</title>
   </head>
   <body class="bg-zinc-900">
-    <div id="root"></div>
+    <div class="overflow-x-hidden" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
